# TextBasedGame

./: Cargo.toml  textgame.py
textgame/: Cargo.toml
textgame/src/: error.rs  game.rs  item.rs  lib.rs  main.rs  message.rs  room.rs
textgame/src/game/: game.rs  game_test.rs  message.rs
textgame/tests/: game_test.rs
textgame_macro/: Cargo.toml
textgame_macro/src/: lib.rs  message.rs
